--- a/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLoggerTests.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLoggerTests.cls
@@ -11,12 +11,13 @@ private class RollupCustomObjectLoggerTests {
     Test.stopTest();
 
     List<RollupLog__c> rollupLogs = [
-      SELECT Id, NumberOfLogEntries__c, TransactionId__c, (SELECT Message__c, LoggingLevel__c FROM RollupLogEntry__r)
+      SELECT Id, NumberOfLogEntries__c, TransactionId__c, ErrorWouldHaveBeenThrown__c, (SELECT Message__c, LoggingLevel__c FROM RollupLogEntry__r)
       FROM RollupLog__c
     ];
     System.assertEquals(1, rollupLogs.size(), 'Parent-level rollup log should have been created');
     RollupLog__c firstEntry = rollupLogs[0];
     System.assertNotEquals(null, firstEntry.TransactionId__c, 'Transaction Id should have been assigned');
+    System.assertEquals(true, firstEntry.ErrorWouldHaveBeenThrown__c, 'ERROR level log message was created, this field should be flagged');
 
     // Rollup Log Entries
     System.assertEquals(2, firstEntry.RollupLogEntry__r.size());
