--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -28,6 +28,7 @@ public class RollupFullBatchRecalculator extends RollupAsyncProcessor implements
   }
 
   public override void execute(Database.BatchableContext bc, List<SObject> calcItems) {
+    RollupLogger.Instance.log('starting full batch recalc run', this, LoggingLevel.DEBUG);
     /**
      * this batch class is a glorified "for loop" for the calc items, dispatching
      * them to the overall Rollup framework while breaking us out of the query limits
