Initial commit reworking logging plugins to allow for better modularization - all of this to better allow for consumers to opt in/out of granular log statements by stipulating a LoggingLevel to use

--- a/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLogger.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLogger.cls
@@ -1,21 +1,27 @@
 public class RollupCustomObjectLogger extends RollupLogger {
   private final List<RollupLogEvent__e> rollupLogEvents = new List<RollupLogEvent__e>();
-  private final Database.DMLOptions truncatedAllowedOptions;
+  private static final Integer MAX_LENGTH = RollupLogEvent__e.Message__c.getDescribe().getLength();
 
   public RollupCustomObjectLogger() {
     super();
-    this.truncatedAllowedOptions = new Database.DMLOptions();
-    this.truncatedAllowedOptions.AllowFieldTruncation = true;
   }
 
   public override void log(String logString, LoggingLevel logLevel) {
+    if (this.getLogLevel().ordinal() > logLevel.ordinal()) {
+      return; // it's a no-op
+    }
+    else if (logString.length() >= MAX_LENGTH) {
+      // normally we could do this with the AllowFieldTruncation property on Database.DMLOptions
+      // but even though you can add DMLOptions to platform event objects, they don't seem to do anything -
+      // and if any of the field's text lengths is exceeded, the platform event just silently fails to trigger - neat!
+      logString = logString.substring(0, MAX_LENGTH - 4) + ' ...';
+    }
     RollupLogEvent__e logEvent = new RollupLogEvent__e(
       LoggingLevel__c = logLevel.name(),
       LoggedBy__c = UserInfo.getUserId(),
       Message__c = logString,
       TransactionId__c = Request.getCurrent().getRequestId()
     );
-    logEvent.setOptions(this.truncatedAllowedOptions);
     this.rollupLogEvents.add(logEvent);
   }
 
